--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=dong
 spring.datasource.password=1234
 
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.redis.cluster.nodes=192.168.1.3:6377,192.168.1.3:6378,192.168.1.3:6379
 
